cmake_minimum_required(VERSION 3.1)
project (nostr_server)
set (CMAKE_CXX_STANDARD 20)
if (MSVC)
	add_compile_options(/W4 /EHsc /DNOMINMAX    )
	set(STANDARD_LIBRARIES "")
else()
	add_compile_options(-Wall -Wextra -Wpedantic)
	set(STANDARD_LIBRARIES "pthread")
endif()
add_compile_options(-Wall -Wno-noexcept-type)
find_package(Git)
if(GIT_EXECUTABLE)
	execute_process(COMMAND ${GIT_EXECUTABLE} submodule update --init WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
endif()
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/)
if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
	set(CMAKE_INSTALL_PREFIX "/usr/local" CACHE PATH "Default path to install" FORCE)
endif()
include_directories(BEFORE ${CMAKE_BINARY_DIR}/src)
include_directories(AFTER src)
include(src/cocls/library.cmake)
include(src/coroserver/library.cmake)
include(src/docdb/library.cmake)
include(src/shared/library.cmake)
add_subdirectory("src/nostr_server")
add_subdirectory("version")
